# RustyAssetBundleEXtractor

./: COPYRIGHT  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: archive_storage_manager.rs  commonstring.rs  config.rs  files.rs  lib.rs  objects.rs  read_ext.rs  typetree.rs
src/files/: bundlefile.rs  serialzedfile.rs  unityfile.rs  webfile.rs
src/objects/: classes.rs  map.rs  pptr.rs
utils/: object_class_generator.py
utils/class_generator/: .gitignore  README.md  config.py  field_type.py  generator.py  metadata_scraper.py
