[package]
name = "urex"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Binary Reader/Write - https://crates.io/crates/binary-reader
# binary-reader = "0.4.5"
byteorder = "1.4.3"

# lazy_static - https://crates.io/crates/lazy_static
# used for CommongString - constant hashmap
lazy_static = "1.4.0"

# paste - https://crates.io/crates/paste
# make macros easier
paste = "1.0.12"

# Compression Libs
# ZLIB & GZIP - https://crates.io/crates/libflate
libflate = "1.3.0"

# LZMA - https://crates.io/crates/lzma-rs
lzma-rs = "0.3.0"

# LZHAM - https://crates.io/crates/lzham
# lzham = "0.1.1" - like never used, needs investigation about how Unity uses it

# BROTLI - https://crates.io/crates/brotli
brotli = "3.3.4"

# LZ4 - https://crates.io/crates/lz4_flex
lz4_flex = "0.10"

# FMOD - https://crates.io/crates/libfmod
# libfmod = "2.2.606" - no wasm support (due to having to provide .dll/.so)

# Texture De/Compression - https://crates.io/crates/libktx_rs_sys
# libktx-rs-sys = "0.3.3+v4.0.0" - no wasm support
# basis-universal = "0.2.0" - no wasm support (yet, can be patched in)

# Image Editing - https://crates.io/crates/image
# image = "0.24.5"

# Virtual FileSystem - https://crates.io/crates/vfs
# vfs = "0.9.0"

# ZipFile Handling - https://crates.io/crates/vfs-zip
# vfs-zip = "0.2.1" - no wasm support (bzip2)

# bitflag - https://crates.io/crates/bitflags
bitflags = "1.3.2"
num_enum = "0.5.11" # https://crates.io/crates/num_enum

# UnityCN Encryption
aes = "0.8.2"
cbc = "0.1.2"
